--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             flex-direction: row;
         }
         .sidebar {
-            width: 20%;
+            width: 4cm;
             background-color: #ff9999;
             padding: 10px;
             box-sizing: border-box;
@@ -192,10 +192,16 @@
                 document.documentElement.lang = 'ar';
                 langSwitchButton.textContent = 'Switch to English';
                 document.body.style.direction = 'rtl';
+                document.querySelectorAll('*').forEach(el => {
+                    el.dir = 'rtl';
+                });
             } else {
                 document.documentElement.lang = 'en';
                 langSwitchButton.textContent = 'Switch to Arabic';
                 document.body.style.direction = 'ltr';
+                document.querySelectorAll('*').forEach(el => {
+                    el.dir = 'ltr';
+                });
             }
         }
     </script>
